--- a/_layouts/website/page.html
+++ b/_layouts/website/page.html
@@ -7,6 +7,7 @@
         <a href='https://creativecommons.org/licenses/by-nc-sa/3.0/es/'>
             <img src='https://mirrors.creativecommons.org/presskit/buttons/88x31/png/by-nc-sa.eu.png' width=120px'/>
         </a>
-        <p>Autor: Sergi Coll<p>
+        <p>Autor: Sergi Coll</p>
+        <p class="updated">Última modificació: {{ file.mtime }}</p>
     </footer>
 {% endblock %}
