--- a/styles/website.css
+++ b/styles/website.css
@@ -50,10 +50,18 @@ img
 footer{
     float: right;
     padding-top: 1em;
+}
+
+footer p {
     font-size: 0.9em !important;
     color: #333;
     font-family: arial;
     font-weight: bold;
+}
+
+footer p.udated
+{
+    font-weight: normal;
 }
 
 
