--- a/styles/website.css
+++ b/styles/website.css
@@ -49,16 +49,20 @@ img
 }
 
 
-/* footer */
+/* FOOTER */
 
 footer{
-    float: right;
+    display: flex;
+    justify-content: space-between;
+    
+    border-top: 1px solid #0000002a;
     padding-top: 1em;
+    font-size: 0.9em !important;
+    color: #333;   
 }
 
-footer p {
-    font-size: 0.9em !important;
-    color: #333;
+footer .author
+{
     font-family: arial;
     font-weight: bold;
 }
