--- a/styles/website.css
+++ b/styles/website.css
@@ -36,7 +36,7 @@ img
 }
 
 /* code sunlight-highlighter plugin */
-.sunlight-code-container, .sunlight-line-number-margin {
+.sunlight-theme-light .sunlight-code-container, .sunlight-theme-light .sunlight-line-number-margin {
     /*padding: 1em 1.1765em;*/
     background-color: #ddd !important;
     padding: 5px !important;
