--- a/styles/website.css
+++ b/styles/website.css
@@ -37,7 +37,8 @@ img
 
 /* code sunlight-highlighter plugin */
 .sunlight-theme-light .sunlight-code-container, .sunlight-theme-light .sunlight-line-number-margin {
-    padding: 1.2em 1.1765em;
+    margin: -1em -1.1765em !important;
+    padding: 1em 1.1765em !important;
     background-color: #ddd !important;
     border-radius: 3px !important;
 }
